--- a/Nop.Plugin.Shipping.USPS/Nop.Plugin.Shipping.USPS.csproj
+++ b/Nop.Plugin.Shipping.USPS/Nop.Plugin.Shipping.USPS.csproj
@@ -1,12 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.2</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <Copyright>Copyright © Nop Solutions, Ltd</Copyright> 
     <Company>Nop Solutions, Ltd</Company> 
     <Authors>Nop Solutions, Ltd</Authors> 
     <PackageLicenseUrl></PackageLicenseUrl> 
-    <PackageProjectUrl>https://www.nopcommerce.com/p/2984/shipping-plugin-for-usps-nopcommerce-team.aspx</PackageProjectUrl> 
+    <PackageProjectUrl>https://www.nopcommerce.com/shipping-plugin-for-usps</PackageProjectUrl> 
     <RepositoryUrl>https://github.com/nopSolutions/USPS-plugin-for-nopcommerce</RepositoryUrl> 
     <RepositoryType>Git</RepositoryType>
     <OutputPath>..\..\Presentation\Nop.Web\Plugins\Shipping.USPS</OutputPath>
